[gd_scene load_steps=7 format=2]

[ext_resource path="res://Joah.gd" type="Script" id=1]
[ext_resource path="res://assets/joah-1.png" type="Texture" id=2]
[ext_resource path="res://assets/soundeffects/joah-hit.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69, 176.5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[node name="Joah" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 17, 30 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 28.5 )
shape = SubResource( 2 )

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -208.0
margin_top = -229.0
margin_right = 208.0
margin_bottom = -189.0
custom_styles/fg = SubResource( 3 )
percent_visible = false

[node name="can_hit_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="can_hit_timer" to="." method="_on_can_hit_timer_timeout"]
